Minor, corrected some CSS spacing issues in the tutorial.

--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -97,7 +97,7 @@
 }
 
 #slide-10-img-1 {
-	width: 60%;
+	width: 50%;
 	
 	box-shadow: 5px 10px;
     color: lightgray;
